# ML-project-backend

./: .env  config.py  db_check.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  models.py  routes.py  utils.py
