[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["welfi.kharroubi <welfi.kharroubi@labs.baycii.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
