[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["welfi.kharroubi <welfi.kharroubi@labs.baycii.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.6"
uvicorn = "0.32.1"
gunicorn = "23.0.0"
alembic = "1.14.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
blinker = "1.9.0"
click = "8.1.7"
exceptiongroup = "1.2.2"
flask = "3.1.0"
flask-cors = "5.0.0"
flask-migrate = "4.0.7"
flask-script = "2.0.6"
flask-sqlalchemy = "3.1.1"
greenlet = "3.1.1"
h11 = "0.14.0"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
mako = "1.3.7"
markupsafe = "3.0.2"
numpy = "1.26.4"
packaging = "24.2"
pandas = "2.2.3"
psycopg2 = "2.9.10"
pydantic = "2.10.3"
pydantic-core = "2.27.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.41.3"
typing-extensions = "4.12.2"
tzdata = "2024.2"
werkzeug = "3.1.3"
scikit-surprise = "^1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
